# sequence_shadows

./: .gitignore  Manifest.toml  Project.toml  README.md  crosstalk_tomography_julia.ipynb  crosstalk_tomography_python.ipynb  pyproject.toml  unitary_noise_optimization.ipynb
Julia/: julia_functions.jl
Python/: core_functions.py
data/: xx01.npz  xx10.npz  xx11.npz  zz01.npz  zz10.npz  zz11.npz
