[tool.poetry]
name = "sequence_shadows"
version = "0.1.0"
description = ""
authors = ["Jonas Kitzinger <jonas.kitzinger@online.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
qiskit = "0.30.0"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
ipykernel = "^6.13.0"
pylatexenc = "^2.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
